  - isContent()
  - hasSubpages()
  - getContentNamespaces()
* Return values in the parameter $pageLang of the hook PageContentLanguage
  with other types than a Language object, deprecated since 1.33, now emmits
  deprecation warnings.
* All external access to ParserOutput and CacheTime classes properties will now
  emit deprecation warnings. Use getters and setters instead.
* The PageArchive class has had several methods deprecated. The replacements
  are as follows:
   - Use UndeletePage instead of ::undeleteAsUser(), ::getFileStatus() and
     ::getRevisionStatus().
   - Use the respective methods of the new ArchivedRevisionLookup service
     instead of ::listRevisions, ::getRevisionRecordByTimestamp,
     ::getArchivedRevisionRecord, ::getPreviousRevisionRecord and
     ::getLastRevisionId.
   - Use ArchivedRevisionLookup::hasArchivedRevisions instead of ::isDeleted.
* LinkCache::addGoodLinkObj() has been hard deprecated.
* …

=== Other changes in 1.38 ===
* The following things were changed in the file deletion form:
   - The name and ID of the submit button are now `wpConfirmB`, not
      `mw-filedelete-submit`
   - The ID of the form is now `deleteconfirm`, not `mw-img-deleteconfirm`
   - The `mw-filedelete-editreasons` class was replaced with
     `mw-delete-editreasons`
  The goal of these changes is to make the HTML more similar to that of
  normal page deletion.
* ParserOptions created with ::newFrom* or ::newCanonical are now identical.
* …

== Compatibility ==

MediaWiki 1.38 requires PHP 7.3.19 or later and the following PHP extensions:

* ctype
* dom
* fileinfo
* iconv
* intl
* json
* mbstring
* xml

MySQL/MariaDB is the recommended DBMS. PostgreSQL or SQLite can also be used,
but support for them is somewhat less mature.

The supported versions are:

* MySQL 5.5.8 or later
* PostgreSQL 9.4 or later
* SQLite 3.8.0 or later

== Online documentation ==
Documentation for both end-users and site administrators is available on